<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/adres_tv"
        android:text="@string/adres_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/adres_et"/>
    <EditText
        android:id="@+id/adres_et"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/adres_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/adres_et"/>
    <Button
        android:id="@+id/pobierz_info_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pobierz_info_bt"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adres_et"/>
    <TextView
        android:id="@+id/rozmiar_pliku_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/rozmiar_pliku_et"
        android:text="@string/rozmiar_pliku_tv"/>
    <TextView
        android:id="@+id/rozmiar_pliku_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@id/rozmiar_pliku_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pobierz_info_bt"
        android:textAlignment="center"
        android:text="0"/>
    <TextView
        android:id="@+id/typ_pliku_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/typ_pliku_et"
        android:text="@string/typ_pliku_tv"/>
    <TextView
        android:id="@+id/typ_pliku_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@id/typ_pliku_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rozmiar_pliku_et"/>
    <Button
        android:id="@+id/pobierz_plik_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pobierz_plik_bt"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typ_pliku_et"/>
    <TextView
        android:id="@+id/pobrano_bajtow_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pobrano_bajtow_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/pobrano_bajtow_et"/>
    <TextView
        android:id="@+id/pobrano_bajtow_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@id/pobrano_bajtow_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pobierz_plik_bt"/>
    <ProgressBar
        android:id="@+id/postep_pb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@android:style/Widget.ProgressBar.Horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pobrano_bajtow_et"/>
</androidx.constraintlayout.widget.ConstraintLayout>